Add Meta webhook proxy endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -26,5 +26,10 @@
         { "key": "Permissions-Policy", "value": "geolocation=(), microphone=(), camera=()" }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/**.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
