Fix Vercel config for build without serverless

--- a/vercel.json
+++ b/vercel.json
@@ -27,9 +27,5 @@
       ]
     }
   ],
-  "functions": {
-    "api/**.js": {
-      "runtime": "@vercel/node@5.3.20"
-    }
-  }
+  "functions": {}
 }
