--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "labregoia-site",
   "version": "1.0.0",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "nodemailer": "^6.9.5"
   }
 }
